--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 				  
 				  	<ul id="drop-first" class="dropdown-content">
                 		 <li><p>Updates available</p><span class="close">&times;</span></li>	
-				    	 <li><p>Dale Byrd liked a post</p><span class="close">&times;</span></li>
-				    	 <li><p>Dawn Wood commented</p><span class="close">&times;</span></li>
+				    	 <li><p>Dale Byrd commented</p><span class="close">&times;</span></li>
+				    	 <li><p>Dawn Wood liked a post</p><span class="close">&times;</span></li>
 				    	 <li><p>You have new followers</p><span class="close">&times;</span></li>
 				  	</ul>
 				</div>
